--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -53,7 +53,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          remotes::install_deps(dependencies = TRUE)
+          remotes::install_deps(dependencies = TRUE);
+          source("scheduler_gw_data.R")
         shell: Rscript {0}
 
       - name: Commit files
@@ -64,7 +65,3 @@ jobs:
           git commit -am "add data"
           git push
 
-      - name: Generate data
-        run: |
-          source("scheduler_gw_data.R")
-        shell: Rscript {0}
