Try again sourcing fun and scheduler

--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -54,8 +54,14 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE);
-          fplmodels::update_gameweek_dataset()
         shell: Rscript {0}
+
+      - name: Generate data
+        run: |
+          source("R/update_gameweek_dataset.R");
+          source("scheduler_gw_data.R");
+        shell: Rscript {0}
+
 
       - name: Commit files
         run: |
