Add /setup-r-dependencies step in YAML

--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -33,6 +33,8 @@ jobs:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
 
+      - uses: r-lib/actions/setup-r-dependencies@v1
+
       - uses: r-lib/actions/setup-pandoc@master
 
       - name: Query dependencies
