--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE);
-          remotes::install_local()
+          remotes::install_local(force = TRUE)
         shell: Rscript {0}
 
       - name: Generate data
