--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -60,6 +60,7 @@ jobs:
         run: |
           remotes::install_deps(dependencies = TRUE);
           remotes::install_local(force = TRUE)
+          remotes::install_github("https://github.com/ewenme/fplr")
         shell: Rscript {0}
 
       - name: Generate data
