--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -26,9 +26,9 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
-      - name: Install curl or something
-        run: |
-          sudo apt install build-essential libcurl4-gnutls-dev libxml2-dev libssl-dev
+      #- name: Install curl or something
+      #  run: |
+      #    sudo apt install build-essential libcurl4-gnutls-dev libxml2-dev libssl-dev
 
       - uses: actions/checkout@v2
 
